# tenax-qtt

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: api.rst  conf.py  index.rst
docs/plans/: 2026-03-24-tenax-qtt-design.md  2026-03-24-tenax-qtt-implementation.md
examples/: function_approximation.py  laplacian_solve.py
src/tenax_qtt/: __init__.py  _utils.py  arithmetic.py  cross.py  folding.py  fourier.py  grid.py  matrix.py  qtt.py
tests/: conftest.py  test_arithmetic.py  test_benchmarks.py  test_cross.py  test_folding.py  test_fourier.py  test_grid.py  test_matrix.py  test_qtt.py
