[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tenax-qtt"
version = "0.1.0"
description = "Quantic Tensor Train (QTT) algorithms built on Tenax"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Tenax Contributors" }]
keywords = ["tensor train", "QTT", "TCI", "cross interpolation", "JAX", "tensor network"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "tenax-tn>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/tenax-lab/tenax-qtt"
Repository = "https://github.com/tenax-lab/tenax-qtt"
Issues = "https://github.com/tenax-lab/tenax-qtt/issues"

[dependency-groups]
dev = ["tenax-qtt[dev]"]

[tool.hatch.build.targets.wheel]
packages = ["src/tenax_qtt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=tenax_qtt --cov-report=term-missing --cov-report=xml"
markers = [
    "core: fast API and infrastructure tests",
    "algorithm: full algorithm runs (TCI, Fourier, contraction)",
    "slow: expensive tests (large grids, high bond dimension)",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/tenax_qtt/__init__.py" = ["E402"]
"examples/**" = ["E402"]
"tests/**" = ["F401", "E402"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false

# For local development, uncomment:
# [tool.uv.sources]
# tenax-tn = { path = "../tenax", editable = true }
